--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Spydroid</string>
+    <string name="help1">Activate Wifi</string>
+    <string name="help2">Connect your phone to your Wifi network</string>
+    <string name="help3">Open chrome or firefox on your PC and visite the URL below</string>
+    <string name="help4">Have fun !!</string>
+    <string name="warning">Wifi should be enabled !</string>
+    <string name="streaming">Streaming !</string>
 </resources>
