New notification in the status bar and some bug fixes
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@149 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="help4">Have fun !!</string>
     <string name="warning">Wifi should be enabled !</string>
     <string name="streaming">Streaming !</string>
+    <string name="notification_title">Spydroid</string>
+    <string name="notification_content">Beware ! Spydroid is running ;)</string>
 </resources>
