- Design improvments - AboutActivity finished - Little bug fix in both HttpServer & RtspServer
git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@163 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,11 @@
     <string name="streaming">Streaming !</string>
     <string name="notification_title">Spydroid</string>
     <string name="notification_content">Beware ! Spydroid is running ;)</string>
-    <string name="connection">Connect</string>
-    <string name="ask_client_ip">Enter the IP of the other phone and press connect</string>
+    <string name="client0">Here you can play streams from another smartphone running Spydroid. Both smartphones obvioulsy have to be connected to the same wireless network !</string>
+    <string name="client1">Connect</string>
+    <string name="about0">Spydroid is a fun and open source application !</string>
+    <string name="about1">If you don\'t understand how to use it, the google page of project is here to help you out. For instance, it contains valuable information about how to catch the stream directly from VLC</string>
+    <string name="about2">Don\'t forget to rate the app, it\'s really important, your life depends on it !</string>
+    <string name="about3">You might also like it on facebook, why not ? Come on, like it ! It will be our little secret</string>
+    <string name="about4">Have Fun !</string>
 </resources>
