git-svn-id: https://spydroid-ipcamera.googlecode.com/svn/trunk@165 5cb46327-39bc-bc92-cdfc-277238c774ba

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="about2">Don\'t forget to rate the app, it\'s really important, your life depends on it !</string>
     <string name="about3">You might also like it on facebook, why not ? Come on, like it ! It will be our little secret</string>
     <string name="about4">Have Fun !</string>
+    <string name="about5">Help me to translate Spydroid in other languages ! If you are willing to help me in this crazy quest, send me a mail :)</string>
 </resources>
