--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -18,8 +18,8 @@
     <string name="client1">Connecter</string>
     <string name="about0">Spydroid est une application amusante et open-source !</string>
     <string name="about1">Si tu ne comprends pas comment t\'en servir visite la page de l\'appli. Elle contient par exemple des informations utiles sur comment récupérer le stream dans VLC</string>
-    <string name="about2">N\'oublies pas de noter l\'appli ! C\'est super important, ta vie en dépend !</string>
-    <string name="about3">Et si t\'es motivé tu peux même la liker sur facebook ? Allé vas-y, like l\'appli</string>
+    <string name="about2">N\'oublie pas de noter l\'appli ! C\'est super important, ta vie en dépend !</string>
+    <string name="about3">Et si t\'es motivé tu peux même la liker sur facebook ? Allez vas-y, like l\'appli</string>
     <string name="about4">Amuse-toi bien !</string>
     <string name="about5">Help me to translate Spydroid in other languages ! If you are willing to help me in this crazy quest, send me a mail :)</string>    
 </resources>
