--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -6,7 +6,7 @@
     <string name="app_name">Spydroid</string>
     <string name="description">Fäng live Video- und Audiostreams aus deinem smartphone mit Spydroid an</string>
     <string name="line1">Mit Chrome oder Firefox schreib:</string>
-    <string name="line2">Oder mit VLC öffne:</string>
+    <string name="line2">Oder öffne mit VLC:</string>
     <string name="about_activity_title">Apropos</string>
     <string name="client_activity_title">Kunde</string>
     <string name="options_activity_title">Einstellungen</string>
@@ -20,6 +20,23 @@
     <string name="about1">Wenn du nicht verstehst, wie sie zu benutzen, dann ist die Google Projektseite hier, um dir zu helfen. zB gibt es darauf wertvolle Informationen, um das Stream direkt mit VLC anzufangen.</string>
     <string name="about2">Vergiss nicht, die App zu bewerten, es ist wirklich folgenreich, dein Leben hängt davon ab!</string>
     <string name="about3">Sie kann dir auch auf Facebook gefallen, warum nicht? Mach schon, like it! Es wird unser kleines Geheimnis sein.</string>
-    <string name="about4">Viel Spass !</string>
+    <string name="about4">Viel Spaß !</string>
     <string name="about5">Hilf mir, Spydroid auf andere Sprachen zu übersetzen! Wenn du bereit bist, mir in dieser verrückten Suche zu helfen, dann send mir eine E-Mail :)</string>
+	<string name="settings0">Die aktuelle Auflösung ist</string>
+    <string name="settings1">Die aktuelle Framerate ist</string>
+    <string name="settings2">Die aktuelle Bitrate ist</string>
+    <string name="settings3">Audiostreaming</string>
+    <string name="settings4">Audiostreaming aktivieren/ deaktivieren</string>
+    <string name="settings5">Audio Encoder</string>
+    <string name="settings6">AAC verlangt wenigstens ICS</string>
+    <string name="settings7">Videostreaming</string>
+    <string name="settings8">Videostreaming aktivieren/ deaktivieren</string>
+    <string name="settings9">Video Encoder</string>
+    <string name="settings10">Zwei Videokomprimierungalgorythmen stehen zur Verfügung: H.263 und H.264</string>
+    <string name="settings11">Auflösung</string>
+    <string name="settings12">Framerate</string>
+    <string name="settings13">Bitrate</string>
+    <string name="settings14">Mehr Optionen</string>
+    <string name="settings15">Mitteilung</string>
+    <string name="settings16">Mitteilung anschalten/ abschalten</string>
 </resources>
