--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -46,6 +46,8 @@
     <string name="settings21">Port used by the HTTP server</string>
     <string name="settings22">Enabled</string>
     <string name="settings23">Enable/Disable the HTTP server. Leave it on if you don\'t know what you are doing !</string>
+    <string name="settings24">Use HTTPS</string>
+    <string name="settings25">By far more secure, see the FAQ for further information. Do not forget the S.</string>
     <string name="page0">Main</string>
     <string name="page1">Preview</string>
     <string name="page2">About</string>
