--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -49,7 +49,9 @@
     <string name="settings24">Use HTTPS</string>
     <string name="settings25">By far more secure, see the FAQ for further information. Do not forget the S.</string>
     <string name="settings26">HTTPS server port</string>
-    <string name="settings27">Port used by the HTTPS server</string>    
+    <string name="settings27">Port used by the HTTPS server</string>
+    <string name="bind_failed">"You need to choose another port for the %s server !"</string>
+    <string name="port_used">"Port already in use !"</string>    
     <string name="page0">Main</string>
     <string name="page1">Preview</string>
     <string name="page2">About</string>
