--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,8 +14,7 @@
     <string name="streaming">Streaming !</string>
     <string name="notification_title">Spydroid</string>
     <string name="notification_content">Beware ! Spydroid is running ;)</string>
-    <string name="client0">Here you can play streams from another smartphone running Spydroid. Both smartphones obviously have to be connected to the same wireless network !</string>
-    <string name="client1">Connect</string>
+    <string name="preview">Start a stream to enable the preview !</string>
     <string name="about0">Spydroid is a fun and open source application !</string>
     <string name="about1">If you don\'t understand how to use it, the google page of the project contains a FAQ. For example, you will find explanations on how to play the stream in VLC</string>
     <string name="about2">Don\'t forget to rate the app, it\'s really important, your life depends on it !</string>
@@ -39,8 +38,6 @@
     <string name="settings14">More options</string>
     <string name="settings15">Notification</string>
     <string name="settings16">Enable/Disable the notification</string>
-    <string name="settings17">Hack for video streaming</string>
-    <string name="settings18">Allow video streaming to continue when the app is sent to the background. May not work well :/</string>
     <string name="settings19">HTTP server</string>
     <string name="settings20">HTTP server port</string>
     <string name="settings21">Port used by the HTTP server</string>
