--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -7,7 +7,7 @@
     <string name="app_name">Spydroid</string>
     <string name="description">Accède à distance à la camera et au micro de ton smartphone avec Spydroid</string>
     <string name="line1">Dans chrome ou firefox recopie</string>
-    <string name="line2">Ou dans VLC ouvre</string>
+    <string name="line2">Dans VLC ouvre</string>
     <string name="about_activity_title">À propos</string>
     <string name="client_activity_title">Client</string>
     <string name="options_activity_title">Réglages</string>
