--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="app_name">Spydroid</string>
     <string name="description">Capture live video and audio streaming from your smartphone with Spydroid</string>
     <string name="line1">In chrome or firefox type</string>
-    <string name="line2">Or in VLC open</string>
+    <string name="line2">In VLC open</string>
     <string name="about_activity_title">About</string>
     <string name="client_activity_title">Client</string>
     <string name="options_activity_title">Settings</string>
